--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
 
+
+ 
+<!DOCTYPE html>
+ 
+<html lang="en">
+<head>
+	<title>DRx Salim Ansari | Android Developer and Pharmacist </title>
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="description" content="DRx Salim Ansari">
+	<meta name="author" content="DRx Salim Ansari">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="theme-color" content="#2196F2">
+</head>
+<body>
+<div id="blue_bg"></div>
+<header>
+	<div id="quick_card" class="card">
+		<div><img id="photo" src="img/photo.jpg" /></div> <!-- replace photo in /img/ 705x705 -->
+		<h1 id="name">DRx Salim Ansari</h1>
+		<h1 id="name">(Mohd Salim Ansari)</h1>
+		
+		<h2 id="description">Android Developer and Pharmacist</h2>
+	</div>
+</header>
+<main>
+<div id="about_card" class="card">
+    <section class="tab">
+        <div class="title"><i class="fa fa-suitcase"></i>My Work</div>
+        <div class="content">
+            <section class="element">
+                        <div class="name">Android Developer @ Plex</div>
+                        <div class="info">Building the awesome Android client of <a href="https://plex.tv/android" target="_blank">Plex</a>. The most beatiful way to watch your media content wherever you are.</div>
+            </section>
+    <!-- <section class="element">
+<div class="name">Your second work</div>
+<div class="info">Building Android client of <a href="http://www.plex.tv" target="_blank">Plex</a>. The most beatiful way to watch your media content wherever you are.</div>
+</section> -->
+<!-- You can add more work details ! -->
+</div>
+</section>
+	<section class="tab">
+		<div class="title"><i class="fa fa-tachometer"></i>Experience</div>
+		<div class="content">
+            <section class="element">
+                        <div class="name">Android Developer @ Gigigo</div>
+                        <div class="info">2014 - 2015</div>
+            </section>
+            <hr align="left"/>
+            <section class="element">
+                        <div class="name">Android Developer @ E-COMM GROUP</div>
+                        <div class="info">2013 - 2014</div>
+            </section>
+            <hr align="left"/>
+			<section class="element">
+						<div class="name">Android Developer @ Visilab</div>
+						<div class="info">2012 - 2013</div>
+			</section>
+			
+			<!-- You can add more experiences! -->
+		</div>
+	</section>
+	<section class="tab">
+		<div class="title"><i class="fa fa-graduation-cap"></i>Education</div>
+		<div class="content">
+			<section class="element">
+				<div class="name">Degree in Computer Science, Computer Software Engineering</div>
+				<div class="info">2012</div>
+			</section>
+			<hr align="left"/>
+			<section class="element">
+				<div class="name">I.T.I.G, Computer Science</div>
+				<div class="info">2011</div>
+			</section>
+			<!-- You can add more education details! -->
+		</div>
+	</section>
+</div>
+<div id="contact_card" class="card">
+	<section class="tab">
+		<div class="title"><i class="fa fa-envelope"></i>Contact</div>
+		<div class="content">
+			<div class="contacts"><a href="mailto:manzanocaminojesus@gmail.com"><i class="fa fa-envelope"></i>  E-Mail</a></div>
+			<div class="contacts"><a href="https://plus.google.com/+JesúsManzanoCamino" target="_blank"><i class="fa fa-google-plus"></i>  Google+</a></div>
+            <div class="contacts"><a href="https://github.com/JesusM" target="_blank"><i class="fa fa-github"></i>  GitHub</a></div>
+			<!-- <div class="contacts"><a href="http://yourlinkhere" target="_blank"><i class="fa fa-globe"></i>  Website</a></div> -->
+			<!-- You can add more contacts! -->
+		</div>
+	</section>
+</div>
+<a href="mailto:manzanocaminojesus@gmail.com">
+	<div id="fab"> <i class="fa fa-envelope"></i> </div>
+</a>
+</main>
+<footer>
+  <small>Personal Cards, <a href="https://plus.google.com/+JesúsManzanoCamino" target="_blank">Jesús Manzano Camino</a></small>
+</footer>
+</body>
+</html>
